--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "tsc-watch": "tsc-watch -p ./"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.6.2",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
@@ -19,6 +20,7 @@
     "sequelize": "^6.17.0",
     "sqlite3": "^5.0.2",
     "superagent": "^7.1.1",
+    "superagent-proxy": "^3.0.0",
     "ts-node": "^10.7.0",
     "tsc-watch": "^4.6.2",
     "typescript": "^4.6.2"
