--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.1",
+    "express": "^4.17.3",
     "hardhat": "^2.9.1",
     "js-conflux-sdk": "^2.0.4",
     "mysql2": "^2.3.3",
