--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ethers": "^5.6.1",
     "express": "^4.17.3",
     "hardhat": "^2.9.1",
+    "influx": "^5.9.3",
     "js-conflux-sdk": "^2.0.4",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
