--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "tsc-watch": "tsc-watch -p ./"
+    "tsc-watch": "tsc-watch -p ./",
+    "compile": "tsc"
   },
   "dependencies": {
     "@ethersproject/providers": "^5.6.2",
