--- a/ui/package.json
+++ b/ui/package.json
@@ -21,8 +21,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
-    "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.6.3"
   },
   "eslintConfig": {
     "extends": [
